k8s/connection-db.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: neo4j
  namespace: linkedin-app
spec:
  serviceName: neo4j
  replicas: 1
  selector:
    matchLabels:
      app: neo4j
  template:
    metadata:
      labels:
        app: neo4j
    spec:
      containers:
        - name: neo4j
          image: neo4j:4.4.39-community

          resources:
            limits:
              cpu: "200m"
              memory: 4Gi
            requests:
              cpu: 100m
              memory: 600Mi

          ports:
#            - containerPort: 7474   # HTTP
            - containerPort: 7687   # BOLT

          volumeMounts:
            - name: neo4j-data
              mountPath: /data
            - name: neo4j-logs
              mountPath: /logs

  volumeClaimTemplates:
    - metadata:
        name: neo4j-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 2Gi
    - metadata:
        name: neo4j-logs
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: neo4j
  namespace: linkedin-app
spec:
  selector:
    app: neo4j
  ports:
    - name: http
      port: 7474
      targetPort: 7474
    - name: bolt
      port: 7687
      targetPort: 7687
