k8s/connection-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: connection-service
  namespace: linkedin-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: connection-service
  template:
    metadata:
      labels:
        app: connection-service
    spec:
      containers:
        - name: connection-service
          image: docker.io/vishalpatidar123/linkedin-app-connection-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9030

          resources:
            requests:
              memory: "400Mi"
              cpu: "150m"
            limits:
              memory: "900Mi"
              cpu: "400m"
---
apiVersion: v1
kind: Service
metadata:
  name: connection-service
  namespace: linkedin-app
spec:
  selector:
    app: connection-service
  ports:
    - port: 80
      targetPort: 9030
  type: ClusterIP
