k8s/kafka-bootstrap.yml
apiVersion: v1
kind: Service
metadata:
  name: kafka-bootstrap
  namespace: linkedin-app
spec:
  type: ClusterIP
  selector:
    app: kafka
  ports:
    - name: broker
      port: 9092
      targetPort: 9092
