k8s/kafka-ui.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-ui
  namespace: linkedin-app
  labels:
    app: kafka-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-ui
  template:
    metadata:
      labels:
        app: kafka-ui
    spec:
      containers:
        - name: kafka-ui
          image: provectuslabs/kafka-ui:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080

          resources:
            requests:
              memory: "300Mi"
              cpu: "100m"
            limits:
              memory: "400Mi"
              cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui
  namespace: linkedin-app
spec:
  type: NodePort
  selector:
    app: kafka-ui
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 30080
