k8s/kafka.yml
 apiVersion: v1
kind: Service
metadata:
  name: kafka-bootstrap
  namespace: linkedin-app
spec:
  type: ClusterIP
  selector:
    app: kafka
  ports:
    - name: broker
      port: 9092
      targetPort: 9092

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  namespace: linkedin-app
spec:
  serviceName: kafka
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: kafka
          image: confluentinc/confluent-local:7.5.0
          imagePullPolicy: IfNotPresent
          command:
            - sh
            - -exc
            - |
              export CLUSTER_ID="6PMpHYL9QkeyXRj9Nrp4KA" && \
              export KAFKA_NODE_ID=0 && \
              export KAFKA_PROCESS_ROLES="broker,controller" && \
              export KAFKA_CONTROLLER_QUORUM_VOTERS="0@kafka-0.kafka:29093" && \
              export KAFKA_LISTENERS="PLAINTEXT://0.0.0.0:9092,CONTROLLER://0.0.0.0:29093" && \
              export KAFKA_ADVERTISED_LISTENERS="PLAINTEXT://kafka-bootstrap.linkedin-app.svc.cluster.local:9092" && \
              export KAFKA_CONTROLLER_LISTENER_NAMES="CONTROLLER" && \
              exec /etc/confluent/docker/run
          ports:
            - containerPort: 9092
              name: broker
            - containerPort: 29093
              name: controller
          resources:
            requests:
              cpu: "100m"
              memory: "512Mi"
            limits:
              cpu: "200m"
              memory: "1Gi"
          volumeMounts:
            - name: kafka-data
              mountPath: /var/lib/kafka/data
  volumeClaimTemplates:
    - metadata:
        name: kafka-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
