k8s/notification-db.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: notification-db
  namespace: linkedin-app
spec:
  selector:
    matchLabels:
      app: notification-db
  serviceName: notification-db
  replicas: 1
  template:
    metadata:
      labels:
        app: notification-db
    spec:
      containers:
        - name: notification-db
          image: postgres:16
          resources:
            limits:
              memory: "200Mi"
              cpu: "200m"
            requests:
              memory: "100Mi"
              cpu: "100m"
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
        storageClassName: standard
        volumeMode: Filesystem

---

apiVersion: v1
kind: Service
metadata:
  name: notification-db
  namespace: linkedin-app
spec:
  clusterIP: None
  selector:
    app: notification-db
  ports:
    - port: 5432
      targetPort: 5432
