k8s/notification-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: linkedin-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: docker.io/vishalpatidar123/linkedin-app-notification-service:0.0.1-SNAPSHOT
          imagePullPolicy: Always
          ports:
            - containerPort: 9040

          resources:
            requests:
              memory: "400Mi"
              cpu: "200m"
            limits:
              memory: "800Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: linkedin-app
spec:
  selector:
    app: notification-service
  ports:
    - port: 80
      targetPort: 9040
  type: ClusterIP
