k8s/posts-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-service
  namespace: linkedin-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts-service
  template:
    metadata:
      labels:
        app: posts-service
    spec:
      containers:
        - name: posts-service
          image: docker.io/vishalpatidar123/linkedin-app-posts-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9010

          resources:
            requests:
              memory: "200Mi"
              cpu: "100m"
            limits:
              memory: "400Mi"
              cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: posts-service
  namespace: linkedin-app
spec:
  selector:
    app: posts-service
  ports:
    - port: 9010
      targetPort: 9010
  type: ClusterIP
