k8s/user-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: linkedin-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: docker.io/vishalpatidar123/linkedin-app-user-service:0.0.1-SNAPSHOT
          imagePullPolicy: Always
          ports:
            - containerPort: 9020

          resources:
            requests:
              memory: "300Mi"
              cpu: "100m"
            limits:
              memory: "700Mi"
              cpu: "300m"
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: linkedin-app
spec:
  selector:
    app: user-service
  ports:
    - port: 80
      targetPort: 9020
  type: ClusterIP
